src/test/ui/error-codes/E0214.stderr
error[E0214]: parenthesized parameters may only be used with a trait
  --> $DIR/E0214.rs:12:15
   |
LL |     let v: Vec(&str) = vec!["foo"];
   |               ^^^^^^ only traits may use parentheses

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0214"
